update FineController
